# tenant-management-java-app

./: .gitignore  DEMO_PRESENTATION_SUMMARY.md  README.md  docker-compose.yml
.cursor/rules/: backend-java.mdc  backend-mcp-uv.mdc  backend-mcp.mdc  database-migrations.mdc  frontend-react.mdc  information-freshness.mdc  project-specific.mdc
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pom.xml
backend-mcp/: .env.example  .eslintrc.cjs  README.md  package.json  tsconfig.json
backend-mcp-uv/: README.md  pyproject.toml
backend-mcp-uv/src/backend_mcp_uv/: __init__.py  __main__.py  config.py  http_client.py  schemas.py  server.py
backend-mcp-uv/src/backend_mcp_uv/tools/: __init__.py  properties.py  tenants.py  transactions.py
backend-mcp/src/: config.ts  httpClient.ts  index.ts  types.ts
backend-mcp/src/tools/: properties.ts  tenants.ts  transactions.ts
backend/data/: dev-db.mv.db  dev-db.trace.db
data/: dev-db.mv.db
docs/: Architecture-Presentation.md  Solution-Design-Document.md  Tenant_Management_System_Demo_Presentation.md  Tenant_Management_System_Live_Demo_Presentation.md  uml-reference.md
docs/architecture/: README.md  api-architecture.md  component-architecture.md  database-architecture.md  deployment-architecture.md  infrastructure-diagrams.md  system-architecture.md
docs/assets/: README.md
docs/assets/screenshots/: README.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js  Navigation.js  Properties.js  PropertyTransactionsModal.js  TenantDetailsModal.js  TenantTransactionsModal.js  Tenants.js  Transactions.js
llm-modules/: .env.example  .gitignore  DEPLOYMENT_STRATEGIES.md  MODULE_INDEPENDENCE.md  README.md  pyproject.toml
llm-modules/docs/: index.md
llm-modules/modules/: __init__.py
llm-modules/modules/chat_bot/: README.md  __init__.py  core.py  main.py
llm-modules/modules/code_generator/: __init__.py  core.py  main.py
llm-modules/modules/standalone_example/: Dockerfile  README.md  __init__.py  core.py  main.py  requirements.txt
llm-modules/modules/text_analyzer/: __init__.py  core.py  main.py
llm-modules/scripts/: deploy.py  setup.py
llm-modules/shared/: __init__.py  config.py  llm_clients.py  types.py  utils.py
llm-modules/tests/: __init__.py
llm-modules/tests/test_modules/: test_chat_bot.py
llm-modules/tests/test_shared/: test_config.py
(+24 files in other folders)
