[project]
name = "backend-mcp-uv"
version = "0.1.0"
description = "Model Context Protocol server exposing Tenant Management backend APIs using uv-managed Python runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [
  { name = "Tenant Management Team" }
]
dependencies = [
  "mcp>=1.16.0,<2.0.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3"
]

[project.scripts]
backend-mcp-uv = "backend_mcp_uv.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5"
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
